src/c47/registerValueConversions.h

  void convertComplexRegisterToRealIfZeroImag                (calcRegister_t regist);
  double  stringToDouble                                     (const char *str);                  //Locale-free strtod: accepts '.' or ',' regardless of the region setting
  void    convertDoubleToReal                                (double x, real_t *destination, realContext_t *ctxt);
  void    convertDoubleToReal34Register                      (double x, calcRegister_t destination);
  void    convertDoubleToReal34RegisterPush                  (double x, calcRegister_t destination);
  void    realToFloat                                        (const real_t *vv, float *v);
  void    realToDouble  /*float used (not double)*/          (const real_t *vv, double *v);
  double  convertRegisterToDouble                            (calcRegister_t regist);
  void badTypeError(calcRegister_t reg);
  void badDomainError(calcRegister_t reg);
  void badTypeErrorX(void);
  void badDomainErrorX(void);
  bool_t getRegisterAsComplexOrReal(calcRegister_t reg, real_t *r, real_t *c, bool_t *cmplx);
  bool_t getRegisterAsComplexOrAnyReal(calcRegister_t reg, real_t *r, real_t *i, bool_t *cmplx);
  bool_t getRegisterAsAnyReal(calcRegister_t reg, real_t *val);
  bool_t getRegisterAsReal34Quiet(calcRegister_t reg, real34_t *val);
  bool_t getRegisterAsRawShortInt(calcRegister_t reg, uint64_t *val, uint32_t *base);
  bool_t getRegisterAsRealQuiet(calcRegister_t reg, real_t *val);
  bool_t getRegisterAsAnyRealQuiet(calcRegister_t reg, real_t *val);
  bool_t getRegisterAsComplexOrRealQuiet(calcRegister_t reg, real_t *r, real_t *c, bool_t *cmplx);
  bool_t getRegisterAsComplexOrAnyRealQuiet(calcRegister_t reg, real_t *r, real_t *i, bool_t *cmplx);