zig_src/shell/register_value_conversions.zig


// convertDoubleToReal moved to engine/kernel/register_convert_bulk.zig.
pub extern fn convertDoubleToReal(x: f64, destination: *real_t, ctxt: *realContext_t) callconv(.c) void;

// convertDoubleToReal34Register moved to engine/kernel/register_convert_bulk.zig.
pub extern fn convertDoubleToReal34Register(x: f64, destination: calcRegister_t) callconv(.c) void;

// convertDoubleToReal34RegisterPush moved to engine/kernel/register_convert_bulk.zig.
pub extern fn convertDoubleToReal34RegisterPush(x: f64, destination: calcRegister_t) callconv(.c) void;

// convertRegisterToDouble moved to engine/kernel/register_convert_bulk.zig.
pub extern fn convertRegisterToDouble(regist: calcRegister_t) callconv(.c) f64;

// exps moved to engine/kernel/register_convert_bulk.zig.

// fnRealToFloat moved to engine/kernel/register_convert_bulk.zig.

// makeNanF32 moved to engine/kernel/register_convert_bulk.zig.
// makeInfF32 moved to engine/kernel/register_convert_bulk.zig.

// realToFloat moved to engine/kernel/register_convert_bulk.zig.
pub extern fn realToFloat(vv: *const real_t, v: *f32) callconv(.c) void;

// fnRealToDouble moved to engine/kernel/register_convert_bulk.zig.

// Locale-free strtod: normalise '.'/',' to the locale radix, then strtod.
// (Ports registerValueConversions.c stringToDouble; used by the save-state
// float->real migration path.)
// stringToDouble moved to engine/kernel/register_convert_bulk.zig.
pub extern fn stringToDouble(str: [*c]const u8) callconv(.c) f64;

// realToDouble moved to engine/kernel/register_convert_bulk.zig.
pub extern fn realToDouble(vv: *const real_t, v: *f64) callconv(.c) void;

// ===========================================================================
// Type checks / error helpers
// ===========================================================================
// typeIsNumber moved to engine/kernel/register_convert_bulk.zig.

// badTypeError moved to engine/kernel/register_integer_convert.zig.
pub extern fn badTypeError(reg: calcRegister_t) callconv(.c) void;

// Shell implementation of the host bad-register-type diagnostic hook: append the
// human-readable register data-type name to the error report. Debug-only
// (extra_info builds); the type-name table and info line are shell-owned.
pub export fn reportBadTypeDetail(reg: calcRegister_t) callconv(.c) void {
    if (comptime extra_info) {
        const name = frontier_debug.getRegisterDataTypeName(reg, true, false);
        const slice = bufPrintZ(errorMessageBuf(), "cannot convert Register {d} from {s}", .{ reg, std.mem.span(name) }) catch return;
        c_moreInfoOnError("In function badTypeError:", slice.ptr, null, null);
    }
}

inline fn errorMessageBuf() []u8 {
    // errorMessage is a host buffer of ample size; bound to a reasonable slice.
    return errorMessage[0..256];
}

// badDomainError moved to engine/kernel/register_convert_bulk.zig.
pub extern fn badDomainError(reg: calcRegister_t) callconv(.c) void;

// badTypeErrorX moved to engine/kernel/register_convert_bulk.zig.
pub extern fn badTypeErrorX() callconv(.c) void;

// badDomainErrorX moved to engine/kernel/register_convert_bulk.zig.
pub extern fn badDomainErrorX() callconv(.c) void;

// ===========================================================================
// getRegisterAs* family
// ===========================================================================
// getRegisterAsComplex moved to engine/kernel/register_convert_bulk.zig.
pub extern fn getRegisterAsComplex(reg: calcRegister_t, r: *real_t, i: *real_t) callconv(.c) bool;

// getRegisterAsComplexOrAnyRealQuiet moved to engine/kernel/register_convert_bulk.zig.
pub extern fn getRegisterAsComplexOrAnyRealQuiet(reg: calcRegister_t, r: *real_t, i: *real_t, cmplx: ?*bool) callconv(.c) bool;

// getRegisterAsComplexOrAnyReal moved to engine/kernel/register_convert_bulk.zig.
pub extern fn getRegisterAsComplexOrAnyReal(reg: calcRegister_t, r: *real_t, i: *real_t, cmplx: ?*bool) callconv(.c) bool;

// getRegisterAsComplexOrRealQuiet moved to engine/kernel/register_convert_bulk.zig.
pub extern fn getRegisterAsComplexOrRealQuiet(reg: calcRegister_t, r: *real_t, i: *real_t, cmplx: ?*bool) callconv(.c) bool;

// getRegisterAsComplexOrReal moved to engine/kernel/register_convert_bulk.zig.
pub extern fn getRegisterAsComplexOrReal(reg: calcRegister_t, r: *real_t, i: *real_t, cmplx: ?*bool) callconv(.c) bool;

// getRegisterAsAnyRealQuiet moved to engine/kernel/register_integer_convert.zig.
pub extern fn getRegisterAsAnyRealQuiet(reg: calcRegister_t, val: *real_t) callconv(.c) bool;

// convertComplexRegisterToRealIfZeroImag moved to engine/kernel/register_convert_bulk.zig.
pub extern fn convertComplexRegisterToRealIfZeroImag(regist: calcRegister_t) callconv(.c) void;

inline fn real34IsZero(v: *align(1) const real34_t) bool {
    return decQuadIsZero(v) != 0;
}
extern fn decQuadIsZero(v: *align(1) const real34_t) u32;

// getRegisterAsRealQuiet moved to engine/kernel/register_integer_convert.zig.
pub extern fn getRegisterAsRealQuiet(reg: calcRegister_t, val: *real_t) callconv(.c) bool;

// getRegisterAsReal moved to engine/kernel/register_integer_convert.zig.
pub extern fn getRegisterAsReal(reg: calcRegister_t, val: *real_t) callconv(.c) bool;

// getRegisterAsAnyReal moved to engine/kernel/register_convert_bulk.zig.
pub extern fn getRegisterAsAnyReal(reg: calcRegister_t, val: *real_t) callconv(.c) bool;

// getRegisterAsReal34Quiet moved to engine/kernel/register_convert_bulk.zig.
pub extern fn getRegisterAsReal34Quiet(reg: calcRegister_t, val: *real34_t) callconv(.c) bool;

// getRegisterAsShortInt moved to engine/kernel/register_convert_bulk.zig.
pub extern fn getRegisterAsShortInt(reg: calcRegister_t, sign: *bool, val: *u64, overflow: ?*bool, fractional: ?*bool) callconv(.c) bool;

pub export fn getRegisterAsRawShortInt(reg: calcRegister_t, val: *u64, base: ?*u32) callconv(.c) bool {
    var sign: bool = undefined;
    var overflow: bool = undefined;
    var fractional: bool = undefined;
    var v: u64 = undefined;
    var b: u32 = undefined;

    if (getRegisterDataType(reg) == dtShortInteger) {
        v = regShortInt(reg).*;
        b = getRegisterShortIntegerBase(reg);
    } else {
        if (!getRegisterAsShortInt(reg, &sign, &v, &overflow, &fractional)) {
            return false;
        }
        if (overflow or fractional) {
            badDomainError(reg);
            return false;
        }
        v = @bitCast(frontier_integers.WP34S_build_value(v, @intFromBool(sign)));
        b = if (lastIntegerBase != 0) lastIntegerBase else 10;
    }
    if (base) |bp| {
        bp.* = b;
    }
    val.* = v;
    return true;
}

// getRegisterAsLongIntQuiet moved to engine/kernel/register_convert_bulk.zig.
pub extern fn getRegisterAsLongIntQuiet(reg: calcRegister_t, val: *mpz_struct, fractional: ?*bool) callconv(.c) c_int;

// getRegisterAsLongInt moved to engine/kernel/register_convert_bulk.zig.
pub extern fn getRegisterAsLongInt(reg: calcRegister_t, val: *mpz_struct, fractional: ?*bool) callconv(.c) bool;

// longIntegerAngleReduction moved to engine/kernel/register_convert_bulk.zig.

// longIntegerBase10Digits moved to engine/kernel/register_convert_bulk.zig.
// longIntegerModuloUInt moved to engine/kernel/register_convert_bulk.zig.

// REAL_SIZE_IN_BYTES(2139): REAL_MAX_DIGITS = ((2139+2)/6)*6+3 = 356*6+3 = 2139;
// REAL_SIZE_IN_BYTES = 10 + 2*(2139/3) = 10 + 2*713 = 1436; rounded to mult of 4.
// REAL_2139_BYTES moved to engine/kernel/register_convert_bulk.zig.

// getRegisterAsRealAngle moved to engine/kernel/register_convert_bulk.zig.
pub extern fn getRegisterAsRealAngle(reg: calcRegister_t, val: *real_t, xAngularMode: *angularMode_t, reduceLongintegerAngle: bool) callconv(.c) bool;

// ===========================================================================
// Monadic / dyadic dispatchers
// ===========================================================================
// processRealComplexMonadicFunction moved to engine/kernel/register_convert_bulk.zig.
pub extern fn processRealComplexMonadicFunction(realf: Fn0, complexf: Fn0) callconv(.c) void;

// processIntRealComplexMonadicFunction moved to engine/kernel/register_convert_bulk.zig.
pub extern fn processIntRealComplexMonadicFunction(realf: Fn0, complexf: Fn0, shortintf: Fn0, longintf: Fn0) callconv(.c) void;

// processRealComplexDyadicFunction moved to engine/kernel/register_convert_bulk.zig.
pub extern fn processRealComplexDyadicFunction(realf: Fn0, complexf: Fn0) callconv(.c) void;

// processIntRealComplexDyadicFunction moved to engine/kernel/register_convert_bulk.zig.
pub extern fn processIntRealComplexDyadicFunction(realf: Fn0, complexf: Fn0, shortintf: Fn0, longintf: Fn0) callconv(.c) void;

// bufPrintZ compat (std.fmt.bufPrintZ was removed upstream): removed in Zig 0.17 master; this form works in both
// pinned 0.16 and master (std.fmt.bufPrint + an explicit sentinel byte).
fn bufPrintZ(buf: []u8, comptime fmt: []const u8, args: anytype) ![:0]u8 {
    const s = try std.fmt.bufPrint(buf[0 .. buf.len - 1], fmt, args);
    buf[s.len] = 0;
    return buf[0..s.len :0];
}
